<resources>
    <string name="app_name">TestInterview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_interview">Загальна співбесіда</string>
    <string name="kotlin_java_interview">Співбесіда по Kotlin та Java</string>
    <string name="android_interview">Співбесіда по Android</string>
    <string name="main_menu">Головне меню</string>
    <string name="delete_button">Кнопка видалення</string>
    <string name="button_start_interview">Кнопка запуску інтерв\'ю</string>
    <string name="topic_name_edit_text">Введіть назву теми</string>
    <string name="topic_hint">Тема</string>
    <string name="category">Категорія</string>
    <string name="kotlin_java">Kotlin та Java</string>
    <string name="question_hint">Запитання</string>
    <string name="answer_hint">Відповідь</string>
    <string name="cancel">Скасувати</string>
    <string name="save">Зберегти</string>
    <string name="add_question">Додати запитання</string>
    <string name="topic_list">Список тем</string>
    <string name="empty_field_error">Заповніть поле!</string>
    <string name="topic_search">Пошук теми</string>
    <string name="android">Android</string>
    <string name="delete_topic">Видалення теми</string>
    <string name="delete_topic_description">Видаляючи тему ви видаляєте всі запитання котрі відносяться до цієї теми. Ви дійсно бажаєте видалити цю тему?</string>
    <string name="confirm">Так</string>
    <string name="no">Ні</string>
    <string name="edit_question_button">Кнопка редагування запитання.</string>
    <string name="count_question">%d / %d</string>
    <string name="next_question">Наступне запитання</string>
    <string name="delete_question">Видалення запитання</string>
    <string name="delete_question_message">Ви дійсно бажаєте видалити це запитання назавжди?</string>
    <string name="show_answer">Показати відповідь</string>
    <string name="shuffle_question_button">Кнопка перемішування запитань</string>
</resources>