<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_count_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_question"
            tools:text="1 / 56"
            android:fontFamily="@font/inter_regular"
            android:textSize="16sp"
            android:textColor="@color/dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_button"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_edit"/>

        <ImageView
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_question_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Модификаторы доступа в Java/Kotlin?"
            android:fontFamily="@font/inter_semi_bold"
            android:textSize="24sp"
            android:textColor="@color/dark"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@id/tv_count_question"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_question_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            tools:text="Java - private, public, protected, package-private (default)
Kotlin - private, public, protected, internal
private - доступность метода, или переменной внутри класса"
            app:layout_constraintTop_toBottomOf="@id/tv_question_title"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>